dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(cssed-tags-plugin, 0.2)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_CANONICAL_HOST

dnl ************************
dnl Checks for OS type
dnl ************************
case "${host}" in
i[[3456]]86-*-linux-gnu*) 
	OSTYPE="LINUX"
	 ;;
powerpc-apple-darwin*)
	OSTYPE="DARWIN"
	;; 
i[[3456]]86-*-*bsd*)
	OSTYPE="BSD"
	;; 
esac

AM_CONDITIONAL(ISDARWIN, test "$OSTYPE" = DARWIN)
AM_CONDITIONAL(ISBSD, test "$OSTYPE" = BSD)

AC_MSG_CHECKING( if prefix is set )
if test "${prefix}" = "NONE"; then
 	echo "no, setting default prefix /usr/local"
 	prefix="/usr/local";
 fi

dnl We need to know the installed cssed's prefix to install the plugin
cssedincludedir=`echo ${prefix}/include/cssed`
AC_MSG_CHECKING( if cssed headers are installed in $cssedincludedir )
if test -e $cssedincludedir/plugin.h; then
 	echo "yes"
else
 	echo "no"
 	AC_MSG_ERROR( headers are not in $cssedincludedir/ please use the same prefix you used when cssed was installed )
fi

case "${OSTYPE}" in
LINUX) 
	CTAGS=ctags
	 ;;
DARWIN)
	CTAGS=ctags-exuberant
	;; 
BSD)
	CTAGS=exctags
	;;
*) 
	CTAGS=ctags
	 ;; 
esac

dnl Exuberant ctags
AC_MSG_CHECKING(for Exuberant Ctags)
if  $CTAGS --version > /dev/null 2>&1; then
	AC_MSG_RESULT(yes)	
	ctags=yes
else
	AC_MSG_ERROR(ctags-exuberant software not found)
	ctags=no
fi

pkg_modules="cssed >= 0.4.0 gtk+-2.0 >= 2.0.0 glib-2.0 >= 2.0 gmodule-2.0 >= 2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=cssed-tags-plugin
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS="es fr"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])






